--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,15 @@
-sentence-transformers
-langchain
-fastapi
-uvicorn
-pypdf
-python-dotenv
-langchain_community
+ipywidgets==8.1.2
+matplotlib==3.8.4
+pandas==2.2.2
+tqdm==4.66.4
 langchain-groq
-langchain_experimental
-chromadb
-faiss-cpu
-unstructured
-pytest
-pylint
+python-dotenv
+langgraph
+langchain_core
+langchain 
+langchain_community
+gitpython
+pypdf
+streamlit
+PyPDF2
 black
